--- a/Stylesheets/_Notices.scss
+++ b/Stylesheets/_Notices.scss
@@ -8,7 +8,8 @@ section.notice
     }
 }
 
-section.notice.canonical
+section.notice.canonical,
+section.notice.extendee
 {
     font-style: italic;
     color: $light-accent-barbie-pink;
