--- a/Stylesheets/_Sidebar.scss
+++ b/Stylesheets/_Sidebar.scss
@@ -14,6 +14,13 @@ div.nountree
         color: $light-accent-barbie-pink;
     }
 
+    > a.text
+    {
+        font-family: $typeface-serif;
+        font-style: italic;
+        font-size: 0.875rem;
+    }
+
     > a.extension.local::first-letter
     {
         color: $light-accent-lavender;
