allow for nested foreign extensions

--- a/Stylesheets/_Notices.scss
+++ b/Stylesheets/_Notices.scss
@@ -8,6 +8,14 @@ section.notice
     }
 }
 
+section.notice.extendee
+{
+    code
+    {
+        font-style: normal;
+        background-color: transparent;
+    }
+}
 section.notice.canonical,
 section.notice.extendee
 {
