--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -4,6 +4,7 @@
 @import 'CodeSpans';
 @import 'Declarations';
 @import 'Groups';
+@import 'Home';
 @import 'Logo';
 @import 'Notices';
 @import 'Search';
