change the frontend search to point to tags/ instead of docs/ if the package is not a dependency of the current volume

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -52,7 +52,7 @@ figure div.pie
         }
         > *.agent.bratz
         {
-            fill: #d39fb0;
+            fill: #f2bbcd;
         }
         > *.agent.robot
         {
