--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -1,6 +1,7 @@
 $light-background: rgb(240, 240, 240);
 $light-background-pink: rgb(255, 224, 239);
 $light-foreground: rgb(22, 22, 22);
+$light-foreground-fade: rgb(50, 50, 50);
 $light-foreground-semi: rgb(109, 109, 109);
 
 $light-foreground-elevated: rgb(223, 223, 223);
