make the connection timeout logic a little smarter, and track ahrefsbot separately

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -62,9 +62,13 @@ figure div.pie
         {
             fill: #f2bbcd;
         }
-        > *.client.scanner
+        > *.client.ahrefsbot
         {
             fill: #e1e1e1;
+        }
+        > *.client.robot
+        {
+            fill: #afafaf;
         }
         > *.client.tooling
         {
