--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -1,4 +1,5 @@
 $light-background: rgb(240, 240, 240);
+$light-background-translucent: rgba(240, 240, 240, 0.5);
 $light-background-pink: rgb(255, 224, 239);
 $light-foreground: rgb(22, 22, 22);
 $light-foreground-fade: rgb(50, 50, 50);
