--- a/Stylesheets/_Search.scss
+++ b/Stylesheets/_Search.scss
@@ -1,3 +1,5 @@
+@import 'BackdropBlur';
+
 div.searchbar-container
 {
     padding: 0.5rem 0;
@@ -5,6 +7,8 @@ div.searchbar-container
     label.checkbox
     {
         background-color: $light-background;
+
+        @include backdrop-blur;
 
         max-width: 20rem;
 
