create a 'miscellaneous' autogroup for every module, and render it with generated section anchors in HTML

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -5,6 +5,7 @@
 @import 'CodeSpans';
 @import 'Declarations';
 @import 'Groups';
+@import 'Headings';
 @import 'Home';
 @import 'Logo';
 @import 'Notices';
