--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -169,6 +169,29 @@ section.group ul
         margin: 0.5rem 0 0.5rem 0;
         padding: 0;
 
+        > a:first-child
+        {
+            position: absolute;
+            margin-left: -1.5em;
+            margin-top: 0.8em;
+        }
+        > a:first-child::before
+        {
+            content: '$';
+
+            line-height: 1.5rem;
+
+            font-family: $typeface-monospace;
+            font-size: 100%;
+            opacity: 0.25;
+            color: $light-foreground-semi;
+        }
+        > a:first-child:hover::before
+        {
+            opacity: 1;
+            color: $light-accent-hot-pink
+        }
+
         > code
         {
             display: block;
