fix missing webkit prefix

--- a/Stylesheets/_BackdropBlur.scss
+++ b/Stylesheets/_BackdropBlur.scss
@@ -1,13 +1,10 @@
 @mixin backdrop-blur
 {
-    @supports(backdrop-filter: blur(6px) saturate(180%))
+    @supports (backdrop-filter: blur(6px) saturate(180%)) or
+        (-webkit-backdrop-filter: blur(6px) saturate(180%))
     {
-        backdrop-filter: blur(6px) saturate(180%);
         background-color: $light-background-translucent;
-    }
-    @supports(-webkit-backdrop-filter: blur(6px) saturate(180%))
-    {
         backdrop-filter: blur(6px) saturate(180%);
-        background-color: $light-background-translucent;
+        -webkit-backdrop-filter: blur(6px) saturate(180%);
     }
 }
