--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -30,160 +30,152 @@ nav.admin
     }
 }
 
-figure div.pie
+figure.client div.pie-color > svg g
 {
-    > div.pie-color > svg g
+    > *.googlebot
     {
-        > *.client.googlebot
-        {
-            fill: #5b82ff;
-        }
-        > *.client.bingbot
-        {
-            fill: #3e6bff;
-        }
-        > *.client.baiduspider
-        {
-            fill: #5c51ff;
-        }
-        > *.client.yandexbot
-        {
-            fill: #6953ff;
-        }
-        > *.client.minor-search-engine
-        {
-            fill: #ae6aff;
-        }
-        > *.client.barbie
-        {
-            fill: #ff73a1;
-        }
-        > *.client.bratz
-        {
-            fill: #f2bbcd;
-        }
-        > *.client.ahrefsbot
-        {
-            fill: #e1e1e1;
-        }
-        > *.client.robot
-        {
-            fill: #afafaf;
-        }
-        > *.client.tooling
-        {
-            fill: #999;
-        }
-
-        > *.language.vi
-        {
-            fill: #d85518;
-        }
-        > *.language.zh
-        {
-            fill: #c7001b;
-        }
-        > *.language.ko
-        {
-            fill: #e75568;
-        }
-        > *.language.ja
-        {
-            fill: #ffc3cb;
-        }
-        > *.language.es
-        {
-            fill: #ffb62f;
-        }
-        > *.language.pt
-        {
-            fill: #38db7c;
-        }
-        > *.language.it
-        {
-            fill: #6edf7d;
-        }
-        > *.language.de
-        {
-            fill: #1f1f1f;
-        }
-        > *.language.fr
-        {
-            fill: #83aaff;
-        }
-        > *.language.en
-        {
-            fill: #fd74a2;
-        }
-        > *.language.ar
-        {
-            fill: #2ba720;
-        }
-        > *.language.hi
-        {
-            fill: #ffb686;
-        }
-        > *.language.bn
-        {
-            fill: #d88f5f;
-        }
-        > *.language.ru
-        {
-            fill: #007a3d;
-        }
-        > *.language.other
-        {
-            fill: #999;
-        }
-        > *.language.none
-        {
-            fill: #5a5a5a;
-        }
-
-        > *.status.multiple-choices
-        {
-            fill: rgb(255, 154, 38);
-        }
-        > *.status.not-modified
-        {
-            fill: $light-accent-hot-pink;
-        }
-        > *.status.ok
-        {
-            fill: $light-accent-barbie-pink;
-        }
-        > *.status.redirected-permanently
-        {
-            fill: rgb(130, 255, 249);
-        }
-        > *.status.redirected-temporarily
-        {
-            fill: rgb(171, 255, 244);
-        }
-        > *.status.not-found
-        {
-            fill: rgb(255, 244, 94);
-        }
-        > *.status.gone
-        {
-            fill: rgb(255, 206, 70);
-        }
-        > *.status.errored
-        {
-            fill: rgb(255, 154, 38);
-        }
-        > *.status.unauthorized
-        {
-            fill: rgb(255, 103, 103);
-        }
-
-        > *.protocol.http1
-        {
-            fill: rgb(207, 207, 207);
-        }
-        > *.protocol.http2
-        {
-            fill: rgb(105, 105, 105);
-        }
+        fill: #5b82ff;
+    }
+    > *.bingbot
+    {
+        fill: #3e6bff;
+    }
+    > *.baiduspider
+    {
+        fill: #5c51ff;
+    }
+    > *.yandexbot
+    {
+        fill: #6953ff;
+    }
+    > *.minor-search-engine
+    {
+        fill: #ae6aff;
+    }
+    > *.barbie
+    {
+        fill: #ff73a1;
+    }
+    > *.bratz
+    {
+        fill: #f2bbcd;
+    }
+    > *.ahrefsbot
+    {
+        fill: #e1e1e1;
+    }
+    > *.robot
+    {
+        fill: #afafaf;
+    }
+    > *.tooling
+    {
+        fill: #999;
+    }
+}
+figure.language div.pie-color > svg g
+{
+    > *.vi
+    {
+        fill: #d85518;
+    }
+    > *.zh
+    {
+        fill: #c7001b;
+    }
+    > *.ko
+    {
+        fill: #e75568;
+    }
+    > *.ja
+    {
+        fill: #ffc3cb;
+    }
+    > *.es
+    {
+        fill: #ffb62f;
+    }
+    > *.pt
+    {
+        fill: #38db7c;
+    }
+    > *.it
+    {
+        fill: #6edf7d;
+    }
+    > *.de
+    {
+        fill: #1f1f1f;
+    }
+    > *.fr
+    {
+        fill: #83aaff;
+    }
+    > *.en
+    {
+        fill: #fd74a2;
+    }
+    > *.ar
+    {
+        fill: #2ba720;
+    }
+    > *.hi
+    {
+        fill: #ffb686;
+    }
+    > *.bn
+    {
+        fill: #d88f5f;
+    }
+    > *.ru
+    {
+        fill: #007a3d;
+    }
+    > *.other
+    {
+        fill: #999;
+    }
+    > *.none
+    {
+        fill: #5a5a5a;
+    }
+}
+figure.status div.pie-color > svg g
+{
+    > *.multiple-choices
+    {
+        fill: rgb(255, 154, 38);
+    }
+    > *.not-modified
+    {
+        fill: $light-accent-hot-pink;
+    }
+    > *.ok
+    {
+        fill: $light-accent-barbie-pink;
+    }
+    > *.redirected-permanently
+    {
+        fill: rgb(130, 255, 249);
+    }
+    > *.redirected-temporarily
+    {
+        fill: rgb(171, 255, 244);
+    }
+    > *.not-found
+    {
+        fill: rgb(255, 244, 94);
+    }
+    > *.gone
+    {
+        fill: rgb(255, 206, 70);
+    }
+    > *.errored
+    {
+        fill: rgb(255, 154, 38);
+    }
+    > *.unauthorized
+    {
+        fill: rgb(255, 103, 103);
     }
 }
