add bottom borders to aside blocks

--- a/Stylesheets/_Prose.scss
+++ b/Stylesheets/_Prose.scss
@@ -37,6 +37,8 @@ section.details
             color: $light-foreground-semi;
             border-bottom: 2px solid $light-foreground-semi;
         }
+
+        border-bottom: 2px solid $light-foreground-semi;
     }
     aside.important,
     aside.warning
@@ -46,6 +48,13 @@ section.details
             color: $light-accent-hot-pink;
             border-color: $light-accent-hot-pink;
         }
+
+        border-color: $light-accent-hot-pink;
+    }
+
+    aside:last-child
+    {
+        border-bottom: none;
     }
 }
 section.details
