--- a/Stylesheets/_Search.scss
+++ b/Stylesheets/_Search.scss
@@ -80,8 +80,6 @@ div.searchbar,
     display: flex;
     flex-flow: column nowrap;
 
-    @include backdrop-blur-pink;
-
     li
     {
         a
@@ -172,6 +170,19 @@ div.searchbar,
     div.search-tool:focus-within #search-results,
     header:focus-within #search-results
     {
-        display: inherit;
+        display: flex;
+    }
+}
+#search-results
+{
+    background-color: $light-background-pink;
+
+    //  Backdrop filter on iOS Safari is broken, it only works for elements that are visible
+    //  on page load. The search results list is not visible unless it contains at least one
+    //  list item, so we have to use an opaque background instead.
+    @supports (backdrop-filter: blur(10px) saturate(180%))
+    {
+        background-color: $light-background-pink-translucent;
+        backdrop-filter: blur(10px) saturate(180%);
     }
 }
