add styling to extension context and symbol anchors

--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -68,6 +68,7 @@ section.group
     }
 }
 //  Generic constraints
+section.generic-context code.constraints,
 section.group code.constraints
 {
     line-height: 1.6rem;
