show rename links in the UI

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -84,6 +84,10 @@ figure.language div.pie-color > svg g
     {
         fill: #2ba720;
     }
+    > *.da
+    {
+        fill: #c86775;
+    }
     > *.de
     {
         fill: #645551;
@@ -112,6 +116,10 @@ figure.language div.pie-color > svg g
     {
         fill: #ffb686;
     }
+    > *.id
+    {
+        fill: #daffc2
+    }
     > *.it
     {
         fill: #6edf7d;
@@ -123,6 +131,10 @@ figure.language div.pie-color > svg g
     > *.ko
     {
         fill: #e75568;
+    }
+    > *.nb
+    {
+        fill: #4f82f2;
     }
     > *.nl
     {
@@ -143,6 +155,10 @@ figure.language div.pie-color > svg g
     > *.sr
     {
         fill: #ce6170;
+    }
+    > *.sv
+    {
+        fill: #40c9ff;
     }
     > *.tr
     {
