--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -25,6 +25,7 @@ $light-accent-yellow: rgb(255, 123, 0);
 $light-accent-lavender: rgb(189, 108, 255);
 $light-accent-violet: rgb(141, 61, 231);
 $light-accent-aqua: rgb(0, 193, 207);
+$light-accent-aqua-shadow: rgb(0, 162, 173);
 
 $dark-accent-yellow: rgb(255, 157, 32);
 $dark-accent-violet: rgb(150, 80, 255);
