add hu language color

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -116,6 +116,10 @@ figure.language div.pie-color > svg g
     {
         fill: #ffb686;
     }
+    > *.hu
+    {
+        fill: #224d84;
+    }
     > *.id
     {
         fill: #daffc2
