--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -1,30 +1,3 @@
-div.breadcrumbs
-{
-    color: $light-swift;
-    font-family: $typeface-monospace;
-    font-weight: 500;
-    font-size: 90.625%;
-
-    a
-    {
-        color: $light-foreground-semi;
-    }
-
-    > *:first-child
-    {
-        margin-left: 0;
-    }
-    > *
-    {
-        margin: 0 0.2rem;
-    }
-    > *:last-child
-    {
-        margin-right: 0;
-        color: $light-foreground;
-    }
-}
-
 section.introduction
 {
     margin-top: 0;
@@ -73,6 +46,38 @@ section.introduction
                 content: ')';
             }
         }
+    }
+
+    nav.breadcrumbs
+    {
+        margin-top: 2em;
+
+        color: $light-swift;
+        font-family: $typeface-monospace;
+        font-weight: 500;
+        font-size: 90.625%;
+
+        a:not(:hover)
+        {
+            color: $light-foreground-semi;
+        }
+
+        > *:first-child
+        {
+            margin-left: 0;
+        }
+        > *
+        {
+            margin: 0 0.2rem;
+        }
+        > *:last-child
+        {
+            margin-right: 0;
+        }
+    }
+    nav.breadcrumbs + h1
+    {
+        margin-top: 0.5em;
     }
 
     a.source::before
