implement UI for transferring packaged between realms

--- a/Stylesheets/_Prose.scss
+++ b/Stylesheets/_Prose.scss
@@ -71,6 +71,12 @@ section.details
         dd
         {
             grid-column: 2;
+
+            span.placeholder
+            {
+                color: $light-foreground-semi;
+                font-style: italic;
+            }
         }
     }
 
