implement a way to gradually uplink all symbol graphs in the database

--- a/Stylesheets/_Tables.scss
+++ b/Stylesheets/_Tables.scss
@@ -67,4 +67,8 @@ section.details table.tags
         color: $light-accent-barbie-pink;
         margin-right: 0.5rem;
     }
+    td.graph > .abi.uplinking:first-child::before
+    {
+        content: '⟳';
+    }
 }
