implement Realms page

--- a/Stylesheets/_Tables.scss
+++ b/Stylesheets/_Tables.scss
@@ -110,3 +110,23 @@ section.details
         }
     }
 }
+section.details
+{
+    > ol.packages
+    {
+        padding-left: 1em;
+
+        li::marker
+        {
+            color: $light-foreground-semi;
+            font-variant-numeric: oldstyle-nums;
+        }
+        li
+        {
+            a
+            {
+                font-style: italic;
+            }
+        }
+    }
+}
